Simultaneously run Jupyter notebooks and RStudio

--- a/data-science/Dockerfile
+++ b/data-science/Dockerfile
@@ -9,6 +9,8 @@ RUN apt-get update \
   && apt-get install -y --no-install-recommends \
     git \
     wget \
+  && apt-get install -y supervisor \
+  && apt-get install -y xvfb \
   && wget -nv -O anaconda.sh https://repo.continuum.io/archive/$ANACONDA_VERSION \
   && /bin/bash anaconda.sh -b -p $ANACONDA_PATH \
   && conda update -y conda \
@@ -23,3 +25,10 @@ RUN apt-get update \
 
 RUN R -e "install.packages('randomForest')" \
     && R -e "install.packages('xgboost', dependencies=TRUE, repos='http://cran.us.r-project.org')";
+
+RUN mkdir -p /data-science-projects/ \
+    && mkdir -p /var/log/supervisor \
+    && usermod -a -G root rstudio \
+    && usermod -a -G rstudio root
+COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+CMD ["/usr/bin/supervisord"]
